refactor: rename format values from 'square'/'vertical' to '1:1'/'9:16'
Update template format naming to use aspect ratio convention for clarity.
Includes database migration and UI label updates.

--- a/admin/template-sync.html
+++ b/admin/template-sync.html
@@ -220,7 +220,7 @@
             onclick="setPreset(1080, 1080, this)"
             class="preset-btn active px-4 py-3 rounded-lg border-2 border-primary bg-primary/10 text-primary font-medium hover:bg-primary/20 transition"
           >
-            <div class="text-sm font-semibold">Square</div>
+            <div class="text-sm font-semibold">1:1</div>
             <div class="text-xs opacity-75">1080 × 1080</div>
           </button>
           <button 
@@ -228,7 +228,7 @@
             onclick="setPreset(1080, 1920, this)"
             class="preset-btn px-4 py-3 rounded-lg border-2 border-gray-300 dark:border-gray-600 text-gray-700 dark:text-gray-300 font-medium hover:border-primary hover:text-primary transition"
           >
-            <div class="text-sm font-semibold">Story</div>
+            <div class="text-sm font-semibold">9:16</div>
             <div class="text-xs opacity-75">1080 × 1920</div>
           </button>
           <button 
