Add privacy/terms pages, drafts screen, and template realtime updates

--- a/admin/index.html
+++ b/admin/index.html
@@ -281,11 +281,11 @@
       <div class="text-2xl font-bold gradient-text">Resulta</div>
       <div class="flex gap-8 text-gray-400">
         <a href="/admin" class="hover:text-white transition">Admin</a>
-        <a href="#" class="hover:text-white transition">Privacy</a>
-        <a href="#" class="hover:text-white transition">Terms</a>
+        <a href="/privacy" class="hover:text-white transition">Privacy</a>
+        <a href="/terms" class="hover:text-white transition">Terms</a>
       </div>
       <div class="text-gray-500 text-sm">
-        © 2026 Resulta. All rights reserved.
+        © 2026 Resulta Inc. All rights reserved.
       </div>
     </div>
   </footer>
